--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -11,3 +11,11 @@
 .turn-highlight{
     color: white;
 }
+.reset-button{
+    padding: 1rem;
+    color: white;
+    background-color: var(--resetGreen);
+    border: none;
+    border-radius: 10px;
+    width: 500px;
+}
